--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
+	#menu-heading {
+		text-align: center;
+	  }
 <head>
-	<title>mod2_solution</title>
+	<title>Assignment Solution for Module 2</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	
+	<body>
 </head>
-<body>
 
+	<h1 id="menu-heading">Our Menu</h1>
+	
 </body>
 </html>
