--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,16 +1,10 @@
 <!DOCTYPE html>
 <html>
-	#menu-heading {
-		text-align: center;
-	  }
 <head>
 	<title>Assignment Solution for Module 2</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	
-	<body>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
+<body>
 	<h1 id="menu-heading">Our Menu</h1>
-	
 </body>
 </html>
