--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Assignment Solution for Module 2</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment Solution for Module 2</title>
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1 id="menu-heading">Our Menu</h1>
+    <!-- Header section -->
+    <header>
+        <h1>Our Menu</h1>
+    </header>
+
+    <!-- Main section -->
+
+    <main>
+
+        <!-- Chicken column -->
+		<div class="text-box">
+		    <h2>Chicken</h2>
+		<p>In the quiet countryside, a charming farm was known for its clucking residents. Chickens of all shapes and sizes roamed freely, filling the air with their cheerful cackles. Fresh eggs were a daily delight, and the farm's fluffy-feathered flock brought a sense of rustic charm to the whole community.</p>
+		</div>
+		  
+        <!-- Beef column -->
+        <div class="text-box">
+			<h3>Beef</h3>
+            <p>In the world of culinary delights, beef takes center stage with its rich flavor and versatility. Whether it's a sizzling steak on a summer grill, a hearty beef stew simmering on a cold winter's day, or a classic burger at a neighborhood diner, beef has a way of satisfying taste buds and bringing people together around the table.</p>
+        </div>
+        <!-- Sushi column -->
+        <div class="text-box">
+			<h4>Sushi</h4>
+            <p>Sushi, a Japanese culinary masterpiece, is an artful combination of flavors, textures, and presentation. Each bite-sized piece is a delightful harmony of fresh seafood, vinegared rice, and various accompaniments. Sushi not only tantalizes the taste buds but also offers a cultural experience that celebrates precision and elegance in every bite.</p>
+        </div>
+    </main>
+        
 </body>
 </html>
