--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,39 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignment Solution for Module 2</title>
-    <!-- Link to the external CSS file -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Yummy Bites</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="icon.png" type="image/gif" sizes="20x20">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-    <!-- Header section -->
-    <header>
-        <h1>Our Menu</h1>
-    </header>
+    <h1>Yummy Bites Present!</h1>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <section>
+            <h2 id="pizza">Pizza</h2>
+            <p>If you’re looking for a quick and satisfying meal, look no further than pizza. It’s the ultimate comfort food that can please any palate. You can order online from our website and get your pizza delivered fast and hot, or pick it up yourself and enjoy it at home.</p>
+        </section>
+    </div>
 
-    <!-- Main section -->
+    <div class="col-lg-4 col-md-6 col-sm-12">
+        <section>
+            <h2 id="burger">Burger</h2>
+            <p>Nothing can compare to the taste of a juicy and tender burger, made with fresh beef or chicken, and loaded with your choice of toppings and sauces. Whether you like it classic or gourmet, you can find your perfect burger at our website.</p>
+        </section>
+    </div>
 
-    <main>
-
-        <!-- Chicken column -->
-		<div class="text-box">
-		    <h2>Chicken</h2>
-		<p>In the quiet countryside, a charming farm was known for its clucking residents. Chickens of all shapes and sizes roamed freely, filling the air with their cheerful cackles. Fresh eggs were a daily delight, and the farm's fluffy-feathered flock brought a sense of rustic charm to the whole community.</p>
-		</div>
-		  
-        <!-- Beef column -->
-        <div class="text-box">
-			<h3>Beef</h3>
-            <p>In the world of culinary delights, beef takes center stage with its rich flavor and versatility. Whether it's a sizzling steak on a summer grill, a hearty beef stew simmering on a cold winter's day, or a classic burger at a neighborhood diner, beef has a way of satisfying taste buds and bringing people together around the table.</p>
-        </div>
-        <!-- Sushi column -->
-        <div class="text-box">
-			<h4>Sushi</h4>
-            <p>Sushi, a Japanese culinary masterpiece, is an artful combination of flavors, textures, and presentation. Each bite-sized piece is a delightful harmony of fresh seafood, vinegared rice, and various accompaniments. Sushi not only tantalizes the taste buds but also offers a cultural experience that celebrates precision and elegance in every bite.</p>
-        </div>
-    </main>
-        
+    <div class="col-lg-4 col-md-12 col-sm-12">
+        <section>
+            <h2 id="tacos">Tacos</h2>
+            <p>Taco is more than just food, it’s a culture. That’s why we make our tacos with authentic ingredients, prepared to order, and served on a warm tortilla. You can customize your taco from our variety of options, or try one of our special tacos.</p>
+        </section>
+    </div>
 </body>
 </html>
